# performance_genai

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: changelog.md  implementation_poa.md  implementation_progress.md  pending_bugs.md  sample_quickstart_code.md
src/performance_genai/: config.py  storage.py
src/performance_genai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/performance_genai/api/: app.py
src/performance_genai/api/static/: editor.js
src/performance_genai/api/templates/: editor.html  index.html  project.html
src/performance_genai/assembly/: render.py
src/performance_genai/providers/: base.py  gemini_provider.py  openai_provider.py
